[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"
description = "A simple blockchain implementation in Rust"
authors = ["Your Name <you@example.com>"]

[lib]
name = "blockchain"
path = "src/lib.rs"

[[bin]]
name = "blockchain"
path = "src/main.rs"

[dependencies]
sha2 = "0.10"
hex = "0.4"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
